configurate package.json

--- a/package.json
+++ b/package.json
@@ -1,6 +1,8 @@
 {
   "name": "projet_famah",
   "version": "0.1.0",
+  "engines" : { "node" : ">=14.16.1" },
+  "engineStrict" : true,
   "private": true,
   "scripts": {
     "dev": "next dev",
