--- a/package.json
+++ b/package.json
@@ -1,13 +1,15 @@
 {
   "name": "projet_famah",
   "version": "0.1.0",
-  "engines" : { "node" : "14.16.1" },
-  "engineStrict" : true,
+  "engines": {
+    "node": "14.16.1"
+  },
+  "engineStrict": true,
   "private": true,
   "scripts": {
     "dev": "next dev",
     "build": "next build",
-    "start": "next start"
+    "start": "next start -p $PORT"
   },
   "dependencies": {
     "next": "10.2.3",
